# dbx

./: .gitattributes  README.md  README.zh-CN.md
.github/workflows/: release.yml
agents/: metadata-constraint-coverage.tsv
agents/common/src/main/java/com/dbx/agent/: ConfiguredJdbcAgent.java  DatabaseAgent.java  JsonRpcServer.java  MetadataListConstraints.java  MetadataSqlSupport.java  StandardJdbcMetadata.java
agents/common/src/test/java/com/dbx/agent/: CommonJavaCompatibilityTest.java  MetadataConstraintCoverageTest.java
agents/drivers/oracle-go/: main.go  main_test.go
agents/drivers/xugu/: main.go  main_test.go
apps/desktop/src/: App.vue
apps/desktop/src/components/config/: DriverStoreDialog.vue
apps/desktop/src/components/connection/: ConnectionDialog.vue
apps/desktop/src/components/diff/: DataCompareDialog.vue
apps/desktop/src/components/editor/: EditorSettingsDialog.vue  QueryEditor.vue
apps/desktop/src/components/export/: DatabaseExportDialog.vue
apps/desktop/src/components/generate/: DataGenerateDialog.vue
apps/desktop/src/components/icons/: DatabaseIcon.vue
apps/desktop/src/components/import/: TableImportDialog.vue
apps/desktop/src/components/layout/: EditorToolbar.vue  SqlLibraryPanel.vue
apps/desktop/src/components/redis/: RedisKeyBrowser.vue  RedisValueViewer.vue
apps/desktop/src/components/sidebar/: ConnectionTree.vue  TreeItem.vue
apps/desktop/src/components/sql-file/: SqlFileExecutionDialog.vue
apps/desktop/src/components/vector/: VectorBrowser.vue
apps/desktop/src/composables/: useDataGridColumnResize.ts  useNavigationTargets.ts
apps/desktop/src/composables/__tests__/: useDataGridColumnResize.spec.ts
apps/desktop/src/i18n/locales/: en.ts  es.ts  it.ts  ja.ts  pt-BR.ts  zh-CN.ts  zh-TW.ts
apps/desktop/src/lib/: api.ts  connectionPresentation.ts  connectionUrl.ts  connectionVisibleDatabases.ts  http.ts  sidebarNodeOrdering.ts  sqlCompletion.ts  sqlSemanticDiagnostics.ts  sqlStatementRanges.ts  tableMetadataCapabilities.ts  tableSqlTemplates.ts  tauri.ts
apps/desktop/src/lib/__tests__/: sqlCompletion.context.spec.ts  sqlStatementRanges.spec.ts
apps/desktop/src/lib/backend/: http.ts  tauri.ts
apps/desktop/src/lib/metadata/: metadataLoadCoordinator.ts  metadataLoadScope.ts  metadataResultCache.ts  tableMetadataCache.ts
apps/desktop/src/lib/sidebar/: sidebarTableSearchControl.ts
apps/desktop/src/stores/: connectionStore.ts  queryStore.ts
apps/desktop/src/stores/__tests__/: connectionStore.metadataLoading.spec.ts
apps/desktop/src/types/: database.ts
crates/dbx-core/: Cargo.toml
crates/dbx-core/assets/: database-drivers.manifest.json
crates/dbx-core/src/: agent_loop.rs  ai.rs  cloud_sync.rs  connection.rs  connection_secrets.rs  database_export.rs  query.rs  query_execution_sql.rs  query_result_export.rs  redis_ops.rs  schema.rs  sql.rs  transfer.rs
crates/dbx-core/src/db/: agent_driver.rs  mod.rs  mysql.rs  postgres.rs  redis_driver.rs  ssh_tunnel.rs  vector_driver.rs
crates/dbx-core/src/models/: connection.rs
crates/dbx-core/tests/: live_postgres_query_result_export.rs
crates/dbx-web/src/: main.rs
crates/dbx-web/src/routes/: mongo.rs
docs/app/[lang]/drivers/: DriversClient.tsx  page.tsx
docs/components/landing/: LandingNav.tsx
docs/lib/: agentRegistry.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.webview2-offline.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: agents.rs  connection.rs  mongo_cmd.rs  plugins.rs  saved_sql.rs  schema.rs
src/components/config/: DriverStoreDialog.vue
src/components/connection/: ConnectionDialog.vue
src/components/editor/: EditorSettingsDialog.vue
src/components/layout/: AppTabBar.vue  AppToolbar.vue
(+31 files in other folders)
